[gd_scene load_steps=32 format=3 uid="uid://7j0vkn3efadf"]

[ext_resource type="PackedScene" uid="uid://byqmrpsamkv7n" path="res://StaticObjects/Floor/Floor.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bddul4h12wu7p" path="res://Player/Player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://g0phogaltx16" path="res://StaticObjects/Block/Block.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bgur3nf13inv" path="res://StaticObjects/Room/Room.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dp1o68j4hq7ff" path="res://StaticObjects/SlopeLow/SlopeLow.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://ce0q4h50cq8ka" path="res://StaticObjects/SphereHalf/SphereHalf.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bcg5whwosaq7j" path="res://StaticObjects/Cylinder/Cylinder.tscn" id="7"]
[ext_resource type="PackedScene" path="res://StaticObjects/Box/Box.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://v64mdkhwlrhh" path="res://StaticObjects/SlopeLowHalf/SlopeLowHalf.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://cfx2m0s6xyhm" path="res://StaticObjects/SlopeMiddleHalf/SlopeMiddleHalf.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://budt10fnpgo6h" path="res://StaticObjects/SlopeHighHalf/SlopeHighHalf.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://okjih4e11evm" path="res://StaticObjects/CrossPlate/CrossPlate.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://b814h6vh3fgno" path="res://StaticObjects/StairsLow/StairsLow.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://wp7qmjpkarrv" path="res://StaticObjects/StairsHigh/StairsHigh.tscn" id="14"]
[ext_resource type="Script" path="res://Scenes/PlayScene.gd" id="15"]
[ext_resource type="PackedScene" uid="uid://ckjckr5ltgpv6" path="res://MovingObjects/MovingPlatform/MovingPlatform.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://cixdlcg0n81ln" path="res://MovingObjects/MovingSlope/MovingSlope.tscn" id="17"]
[ext_resource type="PackedScene" uid="uid://dhbr7g1j3ngh8" path="res://MovingObjects/MovingPlatform2/MovingPlatform2.tscn" id="18"]
[ext_resource type="PackedScene" uid="uid://c8eih4mofi2ts" path="res://MovingObjects/MovingBoxes/MovingBoxes.tscn" id="19"]
[ext_resource type="PackedScene" uid="uid://dwjxnsu0dg3i2" path="res://MovingObjects/MovingLift/MovingLift.tscn" id="20"]
[ext_resource type="PackedScene" uid="uid://d4a7yd53a7y1r" path="res://MovingObjects/RollingCylinder/RollingCylinder.tscn" id="21"]
[ext_resource type="PackedScene" uid="uid://dbqkg2ro2yp3p" path="res://MovingObjects/SpinningPlane/SpinningPlane.tscn" id="22"]
[ext_resource type="PackedScene" uid="uid://c8tomvpr6e0h" path="res://MovingObjects/RollingPlane/RollingPlane.tscn" id="23"]
[ext_resource type="Script" path="res://Others/Pause.gd" id="24_4v7fj"]
[ext_resource type="Script" path="res://Scenes/Debug.gd" id="24_8udls"]
[ext_resource type="Script" path="res://Scenes/DebugDraw.gd" id="24_ac82k"]

[sub_resource type="PrismMesh" id="PrismMesh_3y0qp"]
size = Vector3(6, 11.007, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pcexi"]

[sub_resource type="ProceduralSkyMaterial" id="1"]

[sub_resource type="Sky" id="2"]
sky_material = SubResource("1")

[sub_resource type="Environment" id="3"]
background_mode = 2
sky = SubResource("2")

[node name="PlayScene" type="Node3D"]
script = ExtResource("15")

[node name="Player" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.831228, 0)

[node name="Rooms" type="Node3D" parent="."]

[node name="GeneralRoom" type="Node3D" parent="Rooms"]

[node name="Floor" parent="Rooms/GeneralRoom" instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true

[node name="BlockTestRoom" type="Node3D" parent="Rooms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)

[node name="Block" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 1, 0)

[node name="Block2" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 1, -8.5)

[node name="Block3" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.1, 1, -8.5)

[node name="Block4" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -8.5)

[node name="Block5" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -8.1)

[node name="Block6" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 1, -7.8)

[node name="Block7" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.75, 1, -5.25)

[node name="Block8" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 1.5, 4.5)

[node name="Block9" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, 4.5)

[node name="Block10" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, 5)

[node name="Block11" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, 5)

[node name="Block12" parent="Rooms/BlockTestRoom" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 3, 5)

[node name="Room" parent="Rooms/BlockTestRoom" instance=ExtResource("4")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="StairsLow" parent="Rooms/BlockTestRoom" instance=ExtResource("13")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.2, 0, -2)

[node name="StairsHigh" parent="Rooms/BlockTestRoom" instance=ExtResource("14")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.2, 0, 0)

[node name="SlopeTestRoom" type="Node3D" parent="Rooms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)

[node name="Room" parent="Rooms/SlopeTestRoom" instance=ExtResource("4")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="SphereHalf" parent="Rooms/SlopeTestRoom" instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -8)

[node name="SphereHalf2" parent="Rooms/SlopeTestRoom" instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5)

[node name="SlopeLow" parent="Rooms/SlopeTestRoom" instance=ExtResource("5")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7, 0, 0)

[node name="Cylinder" parent="Rooms/SlopeTestRoom" instance=ExtResource("7")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -2.5, 1, -9)

[node name="Cylinder2" parent="Rooms/SlopeTestRoom" instance=ExtResource("7")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 1, -7)

[node name="Box" parent="Rooms/SlopeTestRoom" instance=ExtResource("8")]
transform = Transform3D(0.782018, -0.376438, 0.496732, 0.612372, 0.612372, -0.5, -0.115966, 0.695194, 0.709406, 0, 1.75, -2)

[node name="SlopeLowHalf" parent="Rooms/SlopeTestRoom" instance=ExtResource("9")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7.5, 0, 8.5)

[node name="SlopeMiddleHalf" parent="Rooms/SlopeTestRoom" instance=ExtResource("10")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.5, 0, 8.5)

[node name="SlopeHighHalf" parent="Rooms/SlopeTestRoom" instance=ExtResource("11")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.5, 0, 8.5)

[node name="CrossPlate" parent="Rooms/SlopeTestRoom" instance=ExtResource("12")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.8, 0)

[node name="CSGMesh3D" type="CSGMesh3D" parent="Rooms/SlopeTestRoom"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 7.689, 2.20372, 9.07939)
use_collision = true
mesh = SubResource("PrismMesh_3y0qp")
material = SubResource("StandardMaterial3D_pcexi")

[node name="LiftTestRoom" type="Node3D" parent="Rooms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)

[node name="Room" parent="Rooms/LiftTestRoom" instance=ExtResource("4")]

[node name="MovingPlatform" parent="Rooms/LiftTestRoom" instance=ExtResource("16")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="MovingSlope" parent="Rooms/LiftTestRoom" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5, 0, -7.5)

[node name="MovingPlatform2" parent="Rooms/LiftTestRoom" instance=ExtResource("18")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 7.5, 0, 7)

[node name="MovingBoxes" parent="Rooms/LiftTestRoom" instance=ExtResource("19")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -7.5)

[node name="MovingLift" parent="Rooms/LiftTestRoom" instance=ExtResource("20")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5, 0, 8.5)

[node name="RollingCylinder" parent="Rooms/LiftTestRoom" instance=ExtResource("21")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7.5, 1.5, 4)

[node name="SpinningPlane" parent="Rooms/LiftTestRoom" instance=ExtResource("22")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 6)

[node name="RollingPlane" parent="Rooms/LiftTestRoom" instance=ExtResource("23")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.5, 1, 6)

[node name="BlankRoom" type="Node3D" parent="Rooms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)

[node name="Room" parent="Rooms/BlankRoom" instance=ExtResource("4")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Environments" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environments"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environments"]
environment = SubResource("3")

[node name="OmniLight3D" type="OmniLight3D" parent="Environments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)
light_energy = 25.0
omni_range = 50.0

[node name="Texts" type="CanvasLayer" parent="."]
process_mode = 3

[node name="DrawDebug" type="Control" parent="Texts"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("24_ac82k")

[node name="Command" type="Label" parent="Texts"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
theme_override_colors/font_color = Color(0.027451, 0.407843, 1, 1)
text = "Move: WASD /  Jump: Space / Run: Shift / Pause Mode: P / Enter: reset position"

[node name="Debug" type="Label" parent="Texts"]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
script = ExtResource("24_8udls")

[node name="Pause" type="Label" parent="Texts"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -87.0
offset_right = 178.0
offset_bottom = -49.0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 25
text = "PAUSE MODE"

[node name="PauseCommand" type="Label" parent="Texts"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -50.0
offset_right = 308.0
offset_bottom = -24.0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Press the O to move to the next frame"

[node name="VBox" type="VBoxContainer" parent="Texts"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -242.0
offset_bottom = 492.0

[node name="GDScriptButton" type="CheckButton" parent="Texts/VBox"]
offset_right = 242.0
offset_bottom = 31.0
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Use GD method"

[node name="StopSlopeButton" type="CheckButton" parent="Texts/VBox"]
offset_top = 35.0
offset_right = 242.0
offset_bottom = 66.0
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Stop on Slope"

[node name="ConstantSpeedButton" type="CheckButton" parent="Texts/VBox"]
offset_top = 70.0
offset_right = 242.0
offset_bottom = 101.0
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Constant Speed"

[node name="OnFloorButton" type="CheckButton" parent="Texts/VBox"]
offset_top = 105.0
offset_right = 242.0
offset_bottom = 136.0
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "On floor only"

[node name="AirFrictionButton" type="CheckButton" parent="Texts/VBox"]
offset_top = 140.0
offset_right = 242.0
offset_bottom = 171.0
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Air friction"

[node name="AccelerationButton" type="CheckButton" parent="Texts/VBox"]
offset_top = 175.0
offset_right = 242.0
offset_bottom = 206.0
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Acceleration"

[node name="FloorSnap" type="HBoxContainer" parent="Texts/VBox"]
offset_top = 210.0
offset_right = 242.0
offset_bottom = 236.0

[node name="FloorSnapLabel" type="Label" parent="Texts/VBox/FloorSnap"]
offset_right = 113.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Floor snap: 0.0"

[node name="FloorSnapSlider" type="HSlider" parent="Texts/VBox/FloorSnap"]
offset_left = 117.0
offset_right = 242.0
offset_bottom = 16.0
size_flags_horizontal = 3
focus_mode = 0
max_value = 20.0
step = 0.1
allow_greater = true

[node name="MaxFloorAngle" type="HBoxContainer" parent="Texts/VBox"]
offset_top = 240.0
offset_right = 242.0
offset_bottom = 266.0

[node name="MaxFloorAngleLabel" type="Label" parent="Texts/VBox/MaxFloorAngle"]
offset_right = 157.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Floor max angle: 45°"

[node name="MaxFloorAngleSlider" type="HSlider" parent="Texts/VBox/MaxFloorAngle"]
offset_left = 161.0
offset_right = 242.0
offset_bottom = 16.0
size_flags_horizontal = 3
focus_mode = 0
step = 5.0
value = 45.0

[node name="WallMinAngle" type="HBoxContainer" parent="Texts/VBox"]
offset_top = 270.0
offset_right = 242.0
offset_bottom = 296.0

[node name="WallMinAngleSlideLabel" type="Label" parent="Texts/VBox/WallMinAngle"]
offset_right = 141.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Min slide angle: 0°"

[node name="WallMinAngleSlideSlider" type="HSlider" parent="Texts/VBox/WallMinAngle"]
offset_left = 145.0
offset_right = 242.0
offset_bottom = 16.0
size_flags_horizontal = 3
focus_mode = 0
step = 5.0

[node name="DrawLines" type="CheckButton" parent="Texts/VBox"]
offset_top = 300.0
offset_right = 242.0
offset_bottom = 331.0
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Draw lines"

[node name="DrawHUD" type="CheckButton" parent="Texts/VBox"]
offset_top = 335.0
offset_right = 242.0
offset_bottom = 366.0
focus_mode = 0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 2
text = "Draw HUD"

[node name="Pause" type="Node" parent="."]
process_mode = 3
script = ExtResource("24_4v7fj")

[connection signal="toggled" from="Texts/VBox/GDScriptButton" to="." method="_on_GDScriptButton_toggled"]
[connection signal="toggled" from="Texts/VBox/StopSlopeButton" to="." method="_on_StopSlopeButton_toggled"]
[connection signal="toggled" from="Texts/VBox/ConstantSpeedButton" to="." method="_on_ConstantSpeedButton_toggled"]
[connection signal="toggled" from="Texts/VBox/OnFloorButton" to="." method="_on_OnFloorButton_toggled"]
[connection signal="toggled" from="Texts/VBox/AirFrictionButton" to="." method="_on_AirFrictionButton_toggled"]
[connection signal="toggled" from="Texts/VBox/AccelerationButton" to="." method="_on_AccelerationButton_toggled"]
[connection signal="value_changed" from="Texts/VBox/FloorSnap/FloorSnapSlider" to="." method="_on_FloorSnapSlider_value_changed"]
[connection signal="value_changed" from="Texts/VBox/MaxFloorAngle/MaxFloorAngleSlider" to="." method="_on_MaxFloorAngleSlider_value_changed"]
[connection signal="value_changed" from="Texts/VBox/WallMinAngle/WallMinAngleSlideSlider" to="." method="_on_WallMinAngleSlideSlider_value_changed"]
[connection signal="toggled" from="Texts/VBox/DrawLines" to="." method="_on_DrawLines_toggled"]
[connection signal="toggled" from="Texts/VBox/DrawHUD" to="." method="_on_DrawHUD_toggled"]
